dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/ltng_TileLauncherEntry__c.object-meta.xml
<CustomObject>
    <description>Tile that can launch a page / url / record within salesforce - customizable by the end user.</description>
    <label>Tile Launcher Entry</label>
    <nameField>
        <label>Tile Launcher Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tile Launcher Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>