dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description for what this link represents</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>