dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used in data loading and updates.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id for the icon.</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>