dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/fields/IconGroup__c.field-meta.xml
<CustomField>
    <fullName>IconGroup__c</fullName>
    <inlineHelpText>The Lightning Design System icon group.
https://www.lightningdesignsystem.com/icons/
Standard is used if not set.</inlineHelpText>
    <label>Icon Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>custom</fullName>
            </value>
            <value>
                <fullName>action</fullName>
            </value>
            <value>
                <fullName>doctype</fullName>
            </value>
            <value>
                <fullName>utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>