dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <description>List of all icons are available here:
https://www.lightningdesignsystem.com/icons/#standard</description>
    <inlineHelpText>Standard Lightning Icon name (or blank if no icon should be used):

https://www.lightningdesignsystem.com/icons</inlineHelpText>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>