dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <inlineHelpText>Name of the custom permission that is required for the user to see this link.</inlineHelpText>
    <label>Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>