dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/fields/SupportedFormFactors__c.field-meta.xml
<CustomField>
    <fullName>SupportedFormFactors__c</fullName>
    <description>Selected values means this tile supports those Lightning Form Factors
$A.get(&#39;$Browser.formFactor&#39;)
For more please see - https://developer.salesforce.com/docs/atlas.en-us.lightning.meta/lightning/expr_browser_value_provider.htm</description>
    <inlineHelpText>If any of the Form Factors match then the tile will be shown (OR not AND)
Blank assumes all form factors.</inlineHelpText>
    <label>Supported Form Factors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHONE</fullName>
            </value>
            <value>
                <fullName>DESKTOP</fullName>
            </value>
            <value>
                <fullName>TABLET</fullName>
            </value>
            <value>
                <fullName>IOS</fullName>
            </value>
            <value>
                <fullName>ANDROID</fullName>
            </value>
            <value>
                <fullName>WINDOWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>