dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Can be URL Schemes, partial urls, etc.</description>
    <inlineHelpText>Target address for the quick link.</inlineHelpText>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>