dx/force-app/main/default/objects/ltng_TileLauncherEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PreferredSortIndex__c</columns>
    <columns>Type__c</columns>
    <columns>Permission__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>